[project]
authors = [{name = "Tom Stanton", email = "tomdstanton@gmail.com"}]
name = "pathogenx"
dynamic = ["urls", "version"]
description = "A Python library for Pathogen Genotype eXploration"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "scipy"
]

[project.scripts]
pathogenx = "pathogenx.cli:main"

[project.optional-dependencies]
test = ["pytest"]
#models = ["numpyro"]
docs = ["mkdocs-material", "mkdocs-api-autonav>=0.3.0,<0.4", "mkdocs-include-markdown-plugin"]
app = [
    "shiny",
    "geopandas",
    "shinyswatch",
    "plotly",
    "faicons",
    "shinywidgets"
]
dev = ["pathogenx[test,docs,app]"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[tool.hatch.version]
source = "vcs"
